# atlas

./: .gitignore  ASSEMBLER_LINKER.md  README.md  corecciones.txt  main.py  pyproject.toml  yeswahreadme
.claude/: settings.local.json
CPU/: cpu.py  formats.py  instructions.py  ram.py  registers.py
CPU/futils/: futils.py
CPU/utils/: utils.py
SPL/: assembler.py  pipeline.py  utils.py
SPL New/: linker.py
SPL/compiler/: Untitled-3.py  analyzer.py  codegen.py  lexer.py  parser.out  parser.py  parsetab.py  semantic.py  types.py
SPL/preprocessor/: includes.py  macros.py  preprocessor.py
SPL/programs/: fast_power.atl  fibonacci.atl  logical_test.atl  main.atl  math.atl  math_test.atl  pizza.atl  pre.atl  strings_test.atl  vecmat_test.atl
SPL_New/: assembler.py  linker.py
SPL_Old/: linker.py  run_final_tests.sh
assembly/: assembly.py  assembly_lex.py  linker_loader.py
compiler/programs/: factorial.atl  fast_power.atl  gcd.atl  main.atl
compiler/src/: main.py
data/: ejemplo.asm  ejemplobin.txt  euclides.txt  euclides_pp.asm  instructions.txt  lib_factorial.asm  main_test_link.asm  main_tres.asm  mod_mergesort.asm  programa_d.asm  test_totales.txt
data/asm/: euclides_mem.asm  fast_power.asm  fast_power_pp.asm  lib_euclides.asm  lib_fibo.asm  matmul.asm  matmul_pp.asm  qa_fpu_ops.asm  qa_logic_memory.asm  qa_org_reloc.asm  (+2 more)
docs/: COMPILADOR.md
interfaz/: interfaz.py
programs/: main.atl
src/: main.py
stdlib/: gcd_lib.asm  math.atl  matmul_lib.asm  power_lib.asm  vecmat.asm  vecmat.atl
test/: registers_test.py
ui/: atlas_ide.py
(+91 files in other folders)
