[project]
name = "ATLAS"
version = "0.1.0"
description = "Emulador, preprocesador, compilador, ensamblador, enlazador para la computadora ATLAS."
dependencies = [
    "flet",
    "ply",
]

[project.scripts]
run = "main:main"
preprocessor = "toolchain.preprocessor.preprocessor:main"
lexer = "toolchain.compiler.lexical_analysis.lexer:main"
parser = "toolchain.compiler.syntax_analysis.parser:main"
